Fixed spacing stuff

--- a/frontend/styles/Home.module.scss
+++ b/frontend/styles/Home.module.scss
@@ -32,4 +32,14 @@
         margin-left: 0;
         margin-top: var(--spacing);
     }
+    .empty {
+        &>div {
+            flex-direction: column;
+            
+            &>div {
+                width: 100%;
+                margin: var(--spacing) 0 0 0;
+            }
+        }
+    }
 }
