--- a/frontend/styles/Navbar.module.scss
+++ b/frontend/styles/Navbar.module.scss
@@ -187,3 +187,9 @@
     display: block;
     padding-top: 0;
 }
+
+@media only screen and (max-width: 600px) {
+    .main {
+        padding: 14px !important;
+    }
+}
